@@ -4,6 +4,9 @@ $Id$
 
 ChangeLog
 
+2009-05-31
+	- listall: include o.ontology_id
+
 2009-05-24
 	- listall: order by o.ontology_id, o.version_number.  The ontology URIs are shown in
 	  versioned form.
